--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.1.0
 beautifulsoup4==4.11.1
 cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+frozenlist==1.3.3
 google-api-core==2.10.2
 google-api-python-client==2.65.0
 google-auth==2.14.1
@@ -10,13 +14,17 @@ googleapis-common-protos==1.56.4
 grpcio==1.50.0
 httplib2==0.21.0
 idna==3.4
+multidict==6.0.2
+numpy==1.23.5
 protobuf==3.20.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
 requests==2.28.1
 rsa==4.9
+scipy==1.9.3
 six==1.16.0
 soupsieve==2.3.2.post1
 uritemplate==4.1.1
 urllib3==1.26.12
+yarl==1.8.1
