--- a/requirements.txt
+++ b/requirements.txt
@@ -16,16 +16,18 @@ httplib2==0.21.0
 idna==3.4
 multidict==6.0.2
 numpy==1.23.5
+prettytable==3.5.0
 protobuf==3.20.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
 requests==2.28.1
 rsa==4.9
-scipy==1.9.3
 schedule==1.1.0
+scipy==1.9.3
 six==1.16.0
 soupsieve==2.3.2.post1
 uritemplate==4.1.1
 urllib3==1.26.12
+wcwidth==0.2.5
 yarl==1.8.1
