--- a/listen.config.example
+++ b/listen.config.example
@@ -12,7 +12,7 @@ csv_file = csv/htlcstream.csv
 
 [TELEGRAM_ACTIONS]
 execute = 1
-daily_report = 1
+daily_report = 0 # reports are broken 
 daily_report_hour = 17
 daily_report_min = 0
 actions = invoice report
