--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-aiosignal==1.3.1
-async-timeout==4.0.2
 attrs==22.1.0
-beautifulsoup4==4.11.1
-cachetools==5.2.0
+bcrypt==4.0.1
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
-frozenlist==1.3.3
-google-api-core==2.10.2
-google-api-python-client==2.65.0
-google-auth==2.14.1
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.56.4
-grpcio==1.50.0
-httplib2==0.21.0
+cryptography==38.0.1
+dbus-python==1.2.16
+distro==1.8.0
+docker==6.0.0
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+greenlet==0.4.17
 idna==3.4
-multidict==6.0.2
-numpy==1.23.5
-prettytable==3.5.0
-protobuf==3.20.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+jsonschema==3.2.0
+msgpack==1.0.0
+packaging==21.3
+paramiko==2.11.0
+pycparser==2.21
+PyGObject==3.38.0
+PyNaCl==1.5.0
+pynvim==0.4.2
 pyparsing==3.0.9
+pyrsistent==0.18.1
+python-dotenv==0.21.0
+PyYAML==5.4.1
 requests==2.28.1
-rsa==4.9
-scipy==1.9.3
 six==1.16.0
-soupsieve==2.3.2.post1
-uritemplate==4.1.1
+texttable==1.6.4
+ufw==0.36
 urllib3==1.26.12
-wcwidth==0.2.5
-yarl==1.8.1
+websocket-client==0.59.0
