--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,31 @@
-attrs==22.1.0
+attrs==22.2.0
 bcrypt==4.0.1
-certifi==2022.9.24
+certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
-cryptography==38.0.1
+cryptography==38.0.4
 dbus-python==1.2.16
 distro==1.8.0
-docker==6.0.0
+docker==6.0.1
 docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
-greenlet==0.4.17
 idna==3.4
 jsonschema==3.2.0
-msgpack==1.0.0
-packaging==21.3
-paramiko==2.11.0
+Mako==1.1.3
+Markdown==3.3.4
+MarkupSafe==1.1.1
+packaging==22.0
+paramiko==2.12.0
 pycparser==2.21
+Pygments==2.7.1
 PyGObject==3.38.0
 PyNaCl==1.5.0
-pynvim==0.4.2
-pyparsing==3.0.9
-pyrsistent==0.18.1
+pyrsistent==0.19.2
 python-dotenv==0.21.0
 PyYAML==5.4.1
 requests==2.28.1
 six==1.16.0
-texttable==1.6.4
-ufw==0.36
-urllib3==1.26.12
+texttable==1.6.7
+urllib3==1.26.13
 websocket-client==0.59.0
