--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 attrs==22.2.0
 bcrypt==4.0.1
-certifi==2022.12.7
+beautifulsoup4==4.11.1
+cachetools==5.2.0
+certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 cryptography==38.0.4
@@ -10,13 +12,28 @@ docker==6.0.1
 docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
+google-api-core==2.11.0
+google-api-python-client==2.70.0
+google-auth==2.15.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.57.0
+greenlet==0.4.17
+grpcio==1.51.1
+httplib2==0.21.0
 idna==3.4
 jsonschema==3.2.0
-Mako==1.1.3
-Markdown==3.3.4
-MarkupSafe==1.1.1
-packaging==22.0
-paramiko==2.12.0
+lxml==4.9.2
+msgpack==1.0.0
+numpy==1.24.1
+packaging==21.3
+paramiko==2.11.0
+pkg_resources==0.0.0
+prettytable==3.5.0
+protobuf==3.20.3
+pure-python-adb==0.3.0.dev0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.23.0
 pycparser==2.21
 Pygments==2.7.1
 PyGObject==3.38.0
@@ -25,7 +42,12 @@ pyrsistent==0.19.2
 python-dotenv==0.21.0
 PyYAML==5.4.1
 requests==2.28.1
+rsa==4.9
+scipy==1.9.3
 six==1.16.0
-texttable==1.6.7
-urllib3==1.26.13
+soupsieve==2.3.2.post1
+texttable==1.6.4
+uritemplate==4.1.1
+urllib3==1.26.12
+wcwidth==0.2.5
 websocket-client==0.59.0
