--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,38 @@
+async-generator==1.10
 attrs==22.2.0
-bcrypt==4.0.1
 beautifulsoup4==4.11.1
-cachetools==5.2.0
-certifi==2022.9.24
-cffi==1.15.1
+bs4==0.0.1
+cachetools==5.2.1
+certifi==2022.12.7
 charset-normalizer==2.1.1
-cryptography==38.0.4
-dbus-python==1.2.16
-distro==1.8.0
-docker==6.0.1
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
+exceptiongroup==1.1.0
 google-api-core==2.11.0
 google-api-python-client==2.70.0
 google-auth==2.15.0
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.57.0
-greenlet==0.4.17
 grpcio==1.51.1
+h11==0.14.0
 httplib2==0.21.0
 idna==3.4
-jsonschema==3.2.0
-lxml==4.9.2
-msgpack==1.0.0
-numpy==1.24.1
-packaging==21.3
-paramiko==2.11.0
-pkg_resources==0.0.0
-prettytable==3.5.0
+outcome==1.2.0
 protobuf==3.20.3
 pure-python-adb==0.3.0.dev0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycairo==1.23.0
-pycparser==2.21
-Pygments==2.7.1
-PyGObject==3.38.0
-PyNaCl==1.5.0
-pyrsistent==0.19.2
-python-dotenv==0.21.0
-PyYAML==5.4.1
+pyotp==2.8.0
+pyparsing==3.0.9
+PySocks==1.7.1
 requests==2.28.1
 rsa==4.9
-scipy==1.9.3
+selenium==4.7.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-texttable==1.6.4
+trio==0.22.0
+trio-websocket==0.9.2
 uritemplate==4.1.1
-urllib3==1.26.12
-wcwidth==0.2.5
-websocket-client==0.59.0
+urllib3==1.26.14
+wsproto==1.2.0
