--- a/channels.config.example
+++ b/channels.config.example
@@ -28,10 +28,16 @@ min_htlc_sat = 100_000
 #    options: KRAKEN|NICEHASH|MUUN|WOS
 swap_method = KRAKEN
 
-# initiate an LN transfer to swap_method when this many sats are found locally in any source channel
-loop_out_amount = 10_000_000
+# when the local balance of the channel reaches this, initiate a loop-out
+max_local_balance_ratio = 0.7
 
-# retry sending a loop-out with lower amount until success
+# when doing a loop-out, target this local balance, not certain to reach it exactly
+min_local_balance_ratio = 0.1
+
+# if paying the loop-out invoice fails, generate up to this many additional invoices
+loop_out_retries = 3
+
+# for each additional retry, lower the invoice amount by this factor e.x. 0.92 lowers by 8% each time
 loop_out_backoff = 0.92
 
 # initiate an onchain withdraw when the account balance exceeds this number of sats
