--- a/creds.config.example
+++ b/creds.config.example
@@ -49,6 +49,14 @@ lightning_address =
 btc_deposit_address =
 loop_out_address =
 
+[OKCOIN]
+# create an okcoin api key and passphrase
+#     enter an onchain address to recieve loop outs from the account
+api_secret = 
+api_token = 
+api_passphrase = 
+loop_out_address = 
+
 [TELEGRAM]
 # send yourself a telegram updates about your node using a bot
 #   1. visit https://telegram.me/BotFather to begin chatting with the BotFather 
