--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@ config.yml
 config.yaml
 creds.yml
 creds.yaml
-# Python cache
+# linter
+pyproject.toml
+# cache
 *__pycache__/
 venv
 .venv
 /.idea/*
+.vscode/
