--- a/example.creds.yml
+++ b/example.creds.yml
@@ -30,13 +30,14 @@ nicehash:
 
 wos:
 # automate a wallet of satoshi account directly with the API
-#   to create an account and get credentials, run the following command
-#   python3 run.py init wos
-  api_secret: YOUR_WOS_API_SECRET
-  api_token: YOUR_WOS_API_TOKEN
-  lightning_address: YOUR_WOS_LIGHTNING_ADDRESS
-  btc_deposit_address: YOUR_WOS_ONCHAIN_DEPOSIT_ADDRESS
-  loop_out_address: YOUR_LND_NODE_ONCHAIN_ADDRESS_FOR_WOS_WIDTHDRAWS
+#   to create an account and get credentials, simply use the Wos TrustedSwapService
+#   your credentials will be generated and saved here automatically
+  api_secret_generated: YOUR_WOS_API_SECRET_WILL_BE_GENERATED_ON_FIRST_RUN
+  api_token_generated: YOUR_WOS_API_TOKEN_WILL_BE_GENERATED_ON_FIRST_RUN
+  lightning_address_generated: YOUR_WOS_LIGHTNING_ADDRESS_WILL_BE_GENERATED_ON_FIRST_RUN
+  deposit_address_generated: YOUR_WOS_ONCHAIN_DEPOSIT_ADDRESS_WILL_BE_GENERATED_ON_FIRST_RUN
+  # you must generate an address from LND and put it here
+  lnd_node_onchain_address: YOUR_LND_NODE_ONCHAIN_ADDRESS_FOR_RECIEVE_FROM_WOS
 
 telegram:
 # send yourself a telegram updates about your node using a bot
